--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,9 @@
     ".next/types/**/*.ts",
     "app/**/*.ts",
     "app/**/*.tsx",
-    ".next/dev/types/**/*.ts"
+    ".next/dev/types/**/*.ts",
+    ".next\\dev/types/**/*.ts",
+    ".next\\dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
