--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "16.0.0",
     "next-themes": "latest",
     "openai": "^6.8.1",
+    "qrcode": "^1.5.4",
     "qrcode.react": "latest",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
